tests/ui/delegation/generics/free-fn-to-trait-method.stderr
error[E0308]: mismatched types
  --> $DIR/free-fn-to-trait-method.rs:31:38
   |
LL |         fn foo<U>(&self, _: U, _: T) {}
   |                - found this type parameter
...
LL | reuse generic_arguments::Trait::<_>::foo::<i32> as generic_arguments1;
   |                                      ^^^
   |                                      |
   |                                      expected `i32`, found type parameter `U`
   |                                      arguments to this function are incorrect
   |
   = note:        expected type `i32`
           found type parameter `U`
note: method defined here
  --> $DIR/free-fn-to-trait-method.rs:23:12
   |
LL |         fn foo<U>(&self, _: U, _: T) {}
   |            ^^^           ----

error[E0308]: mismatched types
  --> $DIR/free-fn-to-trait-method.rs:33:44
   |
LL |     pub trait Trait<T> {
   |     ------------------ found this type parameter
...
LL | reuse <u8 as generic_arguments::Trait<_>>::foo as generic_arguments2;
   |                                            ^^^
   |                                            |
   |                                            expected `&u8`, found `&Self`
   |                                            arguments to this function are incorrect
   |
   = note: expected reference `&u8`
              found reference `&Self`
note: method defined here
  --> $DIR/free-fn-to-trait-method.rs:23:12
   |
LL |         fn foo<U>(&self, _: U, _: T) {}
   |            ^^^    -----

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
